- Added fonts - Client is starting to look nice

--- a/client/res/templates/homepage.html
+++ b/client/res/templates/homepage.html
@@ -1,68 +1,74 @@
-<nav id="main-menu">
-	<a href="#/"><h1><img src="./res/logo-header.png"></h1></a>
-	<a href="#/games">Games</a>
-	<a href="#/about">About</a>
-	<a href="#/blog">Blog</a>
-	<a href="#/media">Media</a>
-</nav>
-<div id="page" class="animated">
-	<div id="content" class="home">
-		<div class="slideshow">
-			<div class="slide">
-				<a href="#/blog/2014/04/11-epoch-exordium"><h3>Langenium - Epoch Exordium</h3></a>
-				<p>Epoch Exordium is an RPG short set in a network of space stations that were built by an AI</p>
-				<a href="#/blog/2014/04/11-epoch-exordium" class="img">
-					<img src="./res/blog/2014/04/11-epoch-exordium.png">
-				</a>
+<div class="ui page grid">
+	<div class="row">
+		<nav class="inverted secondary pointing ui menu">
+			<a href="#/" class="header item"><h1><img src="./res/logo-medium-header.png"></h1></a>
+			<div class="right menu">
+				<a href="#/games" class="item">Games</a>
+				<a href="#/about" class="item">About</a>
+				<a href="#/blog" class="item">Blog</a>
+				<a href="#/media" class="item">Media</a>
 			</div>
-			<div class="slide">
-				<a href="#/blog/2014/04/12-langenium-characters"><h3>MMO Character Roster (Draft 2)</h3></a>
-				<p>More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon </p>
-				<a href="#/blog/2014/04/12-langenium-characters" class="img">
-					<img src="./res/blog/2014/04/12-langenium-characters.png">
-				</a>
-			</div>
-			<div class="slide">
-				<a href="#/blog/2014/04/25-staging-server"><h3>Introducing the Staging Server</h3></a>
-				<p>I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option</p>
-				<a href="#/blog/2014/04/25-staging-server" class="img">
-					<img src="./res/blog/2014/04/25-staging-server.jpg">
-				</a>
-			</div>
-		</div>
+		</nav>
 	</div>
-	<div id="sidebar" class="home">
-		<div class="blog-item">
-			<a href="#/blog/2014/04/25-staging-server"><h3>Introducing the Staging Server</h3></a>
-			<a href="#/blog/2014/04/25-staging-server" class="push-left">
-				<img src="./res/blog/2014/04/25-staging-server-thumb.png">
-			</a>
-			<div class="time">25th of April 2014 </div>
-			<p>I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option</p>
+	<div id="page" class="row">
+		<div class="ten wide column">
+			<div class="slideshow">
+				<div class="slide">
+					<a href="#/blog/2014/04/11-epoch-exordium"><h3>Langenium - Epoch Exordium</h3></a>
+					<p>Epoch Exordium is an RPG short set in a network of space stations that were built by an AI</p>
+					<a href="#/blog/2014/04/11-epoch-exordium" class="img">
+						<img src="./res/blog/2014/04/11-epoch-exordium.png">
+					</a>
+				</div>
+				<div class="slide">
+					<a href="#/blog/2014/04/12-langenium-characters"><h3>MMO Character Roster (Draft 2)</h3></a>
+					<p>More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon </p>
+					<a href="#/blog/2014/04/12-langenium-characters" class="img">
+						<img src="./res/blog/2014/04/12-langenium-characters.png">
+					</a>
+				</div>
+				<div class="slide">
+					<a href="#/blog/2014/04/25-staging-server"><h3>Introducing the Staging Server</h3></a>
+					<p>I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option</p>
+					<a href="#/blog/2014/04/25-staging-server" class="img">
+						<img src="./res/blog/2014/04/25-staging-server.jpg">
+					</a>
+				</div>
+			</div>
 		</div>
-		<div class="blog-item">
-			<a href="#/blog/2014/04/12-langenium-characters"><h3>MMO Character Roster (Draft 2)</h3></a>
-			<a href="#/blog/2014/04/12-langenium-characters" class="push-right">
-				<img src="./res/blog/2014/04/12-langenium-characters-thumb.png">
-			</a>
-			<div class="time">12th of April 2014 </div>
-			<p>More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon </p>
-		</div>
-		<div class="blog-item">
-			<a href="#/blog/2014/04/11-epoch-exordium"><h3>Langenium - Epoch Exordium</h3></a>
-			<a href="#/blog/2014/04/11-epoch-exordium" class="push-left">
-				<img src="./res/blog/2014/04/11-epoch-exordium-thumb.png">
-			</a>
-			<div class="time">11th of April 2014 </div>
-			<p>Epoch Exordium is an RPG short set in a network of space stations that were built by an AI</p>
-		</div>
-		<div class="blog-item">
-			<a href="#/blog/2014/03/27-texture-work"><h3>Texture work</h3></a>
-			<a href="#/blog/2014/03/27-texture-work" class="push-right">
-				<img src="./res/blog/2014/03/27-texture-work-thumb.jpg">
-			</a>
-			<div class="time">27th of March 2014 </div>
-			<p>Working on textures so I can immediately go into creating the space station models and interiors.</p>
+		<div class="six wide column">
+			<div class="ui vertical item">
+				<a href="#/blog/2014/04/25-staging-server"><h3>Introducing the Staging Server</h3></a>
+				<a href="#/blog/2014/04/25-staging-server" class="push-left">
+					<img src="./res/blog/2014/04/25-staging-server-thumb.png">
+				</a>
+				<div class="time">25th of April 2014 </div>
+				<p>I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option</p>
+			</div>
+			<div class="ui vertical item">
+				<a href="#/blog/2014/04/12-langenium-characters"><h3>MMO Character Roster (Draft 2)</h3></a>
+				<a href="#/blog/2014/04/12-langenium-characters" class="push-right">
+					<img src="./res/blog/2014/04/12-langenium-characters-thumb.png">
+				</a>
+				<div class="time">12th of April 2014 </div>
+				<p>More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon </p>
+			</div>
+			<div class="ui vertical item">
+				<a href="#/blog/2014/04/11-epoch-exordium"><h3>Langenium - Epoch Exordium</h3></a>
+				<a href="#/blog/2014/04/11-epoch-exordium" class="push-left">
+					<img src="./res/blog/2014/04/11-epoch-exordium-thumb.png">
+				</a>
+				<div class="time">11th of April 2014 </div>
+				<p>Epoch Exordium is an RPG short set in a network of space stations that were built by an AI</p>
+			</div>
+			<div class="ui vertical item">
+				<a href="#/blog/2014/03/27-texture-work"><h3>Texture work</h3></a>
+				<a href="#/blog/2014/03/27-texture-work" class="push-right">
+					<img src="./res/blog/2014/03/27-texture-work-thumb.jpg">
+				</a>
+				<div class="time">27th of March 2014 </div>
+				<p>Working on textures so I can immediately go into creating the space station models and interiors.</p>
+			</div>
 		</div>
 	</div>
 </div>
