- Updated homepage to website and made some tiny changes to core startup.   This is all uniform now. The two modes Website and Editor are separate   and will both populate the l variable. L is the engine and framework, l   is the application that brings things together with it's own ideas of   views and data models. - The system is fully modular now so I'll have to   work out how to do dependency chaining and maybe even auto loading (holy   crap that'd be sexy) - Made website template a bit shinier, as per Homepage example from   Semantic UI (http://semantic-ui.com/build/examples/homepage.html)

--- a/client/res/templates/website.html
+++ b/client/res/templates/website.html
@@ -1,8 +1,18 @@
 <div class="ui page grid">
 	<div class="row">
-		<nav class="inverted secondary pointing ui menu">
+		<nav class="ui inverted secondary pointing menu">
 			<a href="#/" class="header item"><h1><img src="./res/logo-medium-header.png"></h1></a>
 			<div class="right menu">
+				<div class="ui inverted secondary pointing top right mobile dropdown link item">
+					Menu
+					<i class="dropdown icon"></i>
+					<div class="ui secondary menu">
+						<a href="#/games" class="item">Games</a>
+						<a href="#/about" class="item">About</a>
+						<a href="#/blog" class="item">Blog</a>
+						<a href="#/media" class="item">Media</a>
+					</div>
+				</div>
 				<a href="#/games" class="item">Games</a>
 				<a href="#/about" class="item">About</a>
 				<a href="#/blog" class="item">Blog</a>
