- Main renderer viewport CSS fixed - Created new Director class for managing the "Scene" experiences - Creating new Scenograph class to expose the object tree and store the   model for UI and game objects

--- a/client/src/core.css
+++ b/client/src/core.css
@@ -36,3 +36,12 @@ h3 {
 h4 {
 	font-size: 1.25rem;
 }
+
+body > canvas {
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	position: fixed;
+	z-index: -1;
+}
