--- a/client/src/modes/editor.css
+++ b/client/src/modes/editor.css
@@ -1,6 +1,6 @@
 .sidebar-button,
 .console {
-	position: relative;
+	position: absolute;
 	z-index: 1;
 }
 
@@ -16,6 +16,7 @@
 
 .console {
 	background-color:rgba(0,0,0,0.5);
+	padding-left: 50px;
 }
 .console .menu {
 	overflow-y: scroll;
@@ -26,6 +27,9 @@
 	color: #FFFFFF;
 }
 
+.sidebar .ui.dropdown .text {
+	max-width: 100px;
+}
 
 @media only screen and (max-width : 768px) {
 
