--- a/src/modes/website.css
+++ b/src/modes/website.css
@@ -30,16 +30,45 @@
 	display: block;
 	margin: .5em auto;
 }
-
-.six.wide.column .ui.vertical.item h4 {
-	padding: .5em 0 .25em 0;
-	display: block;
-	clear: both;
+.column p a {
+	color: #666666;
+	text-decoration: underline;
+	-moz-transition: all .25s;
+    -webkit-transition: all .25s;
+    transition: all .25s;
 }
-.six.wide.column .ui.vertical.item a {
-	display: block;
+.wide.column .item a {
+	text-decoration: none;
+	color: #FFFFFF;
+	-moz-transition: all .25s;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+}
+
+.column .item a.img {
 	float: left;
-	margin: 0 .5em .5em 0;
+	margin: 0 .5em 0 0;
+}
+.column .item a.img:hover {
+	opacity: 0.75;
+    background: rgba(0,0,0,.75);
+    -moz-transition: all .25s;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+}
+
+.column p a:hover,
+.slideshow .slide a:hover,
+.wide.column .item a:hover {
+	color: #999999;
+	text-decoration: none;
+	-moz-transition: all .25s;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+}
+
+.wide.column .item h3 {
+	margin: .5em 0;
 }
 
 @media only screen and (max-width : 768px) {
