All third party dependencies are in. Waiting for universe submodule to come in on other machine :|

--- a/new/index.pug
+++ b/new/index.pug
@@ -8,7 +8,8 @@ html
     .container
       header.row
         h1.logo 
-          a(href='/') Langenium
+          a(href='/', title='Langenium')
+            img(src='logo.png')
         nav
           ul
             li
@@ -55,4 +56,4 @@ html
             li
               h3 
                 a(href='#') Capicola sirloin corned beef pancetta rump pork chop
-  include scripts.pug
+  include templates/scripts.pug
