--- a/new/styles.css
+++ b/new/styles.css
@@ -37,6 +37,10 @@ header h1.logo::after {
 header h1.logo:last-child {
   margin-right: 0%;
 }
+header h1.logo img {
+  max-width: 100%;
+  max-height: 100%;
+}
 header nav {
   float: left;
   clear: none;
@@ -58,6 +62,9 @@ header nav ul {
 }
 header nav li {
   list-style-type: none;
+}
+header nav li {
+  display: inline-block;
 }
 header .fb-like {
   float: left;
