--- a/new/styles.styl
+++ b/new/styles.styl
@@ -9,6 +9,10 @@ reset-list()
     padding 0
   li
     list-style-type none
+    
+stretch-image()
+  max-width 100%
+  max-height 100%
 
 .row 
   clearfix()
@@ -21,10 +25,15 @@ reset-list()
 header
   h1.logo
     column(1)
+    img
+      stretch-image()
+      
 
   nav
     column(1/2)
     reset-list()
+    li
+      display inline-block
 
   .fb-like
     column(1/2)
