Making changes for Issue 8

--- a/new/pages/index.pug
+++ b/new/pages/index.pug
@@ -56,4 +56,4 @@ html
             li
               h3 
                 a(href='#') Capicola sirloin corned beef pancetta rump pork chop
-  include templates/scripts.pug
+  include templates/vendor_scripts.pug
