Using npm as build tool, working beautifully

--- a/new/pages/index.pug
+++ b/new/pages/index.pug
@@ -37,7 +37,7 @@ html
       .row
         .news
           h2 News
-          include:markdown news.md
+          include news.md
         .most_popular
           h2 Most Popular
           ul
@@ -56,4 +56,4 @@ html
             li
               h3 
                 a(href='#') Capicola sirloin corned beef pancetta rump pork chop
-  include templates/vendor_scripts.pug
+  include ../templates/vendor_scripts.pug
