Setup npm as build tool. Who needs task runners?

--- a/new/pages/index.pug
+++ b/new/pages/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Langenium 2016 Rebuild
-    link(href='styles.css', rel='stylesheet')
+    link(href='dist/styles.css', rel='stylesheet')
   body
     #fb-root
     .container
