--- a/new/templates/partials/head.pug
+++ b/new/templates/partials/head.pug
@@ -1,3 +1,3 @@
 head
   title Langenium 2016 Rebuild
-  link(href='dist/styles.css', rel='stylesheet')
+  link(href='/dist/styles.css', rel='stylesheet')
