Finished setting up IA

--- a/new/templates/layouts/homepage.pug
+++ b/new/templates/layouts/homepage.pug
@@ -17,7 +17,7 @@
   .row
     .news
       h2 News
-      include news.md
+      include:markdown news.md
     .most_popular
       h2 Most Popular
       ul
