Removed debug. Going to style up a little bit.. introduce fonts. Purge most popular for now

--- a/templates/layouts/homepage.pug
+++ b/templates/layouts/homepage.pug
@@ -18,6 +18,7 @@
     .news
       h2 News
       include:markdown news.md
+      iframe(width="560", height="315", src="https://www.youtube.com/embed/cJcr09qIVrI" frameborder="0", allowfullscreen='')
     .most_popular
       h2 Most Popular
       ul
