--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -1,6 +1,6 @@
 @import 'node_modules/jeet/jeet'
 
-// Helpers
+// Mixins
 
 reset-list()
   ul
@@ -12,13 +12,27 @@ stretch-image()
   max-width 100%
   max-height 100%
 
-.row 
+// Helpers
+
+.row
   clearfix()
+  center(1200px)
+  header&
+    max-width none
+    
+// Globals
+html, body 
+  font-family sans-serif
+  background-color #000
+  color #FFF
+
+a
+  color #1AF
+  text-decoration none
+  &:hover
+    text-decoration underline
 
 // Layout
-
-.container
-  center(1920px)
   
 header
   h1.logo
