Got basic threejs example working

--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -49,7 +49,12 @@ header
 
   .fb-like
     column(1/2)
-  
+
+.hero
+  canvas
+    width 100% !important
+    height 100% !important
+
 .hero,
 .call_to_action,
 .news,
