Removed rolled up vendor config and files. Switched to old way. I guess rollup should be used per project hehe

--- a/templates/partials/scripts.pug
+++ b/templates/partials/scripts.pug
@@ -1,5 +1,12 @@
 block scripts
   script(src='/dist/vendor.js')
+  script(src='/vendor/jquery/dist/jquery.min.js')
+  script(src='/vendor/threejs/build/three.min.js')
+  script(src='/vendor/Live2D-WebGL-SDK/lib/live2d.min.js')
+  script(src='/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js')
+  script(src='/vendor/Live2D-WebGL-SDK/framework/PlatformManager.js')
+  script(src='/vendor/Live2D-WebGL-SDK/framework/LAppLive2DManager.js')
+  script(src='/vendor/Live2D_ThreeJS/Live2DRender.js')
   script(src='/dist/example.js')
   script
     | // Facebook Like Button.
