--- a/templates/partials/scripts.pug
+++ b/templates/partials/scripts.pug
@@ -3,6 +3,7 @@ block scripts
   script(src='/vendor/threejs/build/three.min.js')
   script(src='/vendor/threejs/examples/js/controls/OrbitControls.js')
   script(src='/dist/Mirror.js')
+  script(src='/vendor/ocean/water-material.js')
   script(src='/vendor/Live2D-WebGL-SDK/lib/live2d.min.js')
   script(src='/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js')
   script(src='/vendor/Live2D-WebGL-SDK/sample/sampleApp1/src/PlatformManager.js')
