Made logo clickable again

--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -35,7 +35,7 @@ a
 // Layout
   
 header
-  h1.logo
+  .logo
     column(1)
     img
       stretch-image()
@@ -81,7 +81,7 @@ header
 // Desktop
 @media screen and (min-width: 1200px)
   header
-    h1.logo
+    .logo
       column(4/12)
     nav
       column(7/12)
