--- a/templates/partials/header.pug
+++ b/templates/partials/header.pug
@@ -1,7 +1,6 @@
 header.row
-  h1.logo 
-    a(href='/', title='Langenium')
-      img(src='/logo.png')
+  a.logo(href='/', title='Langenium')
+    img(src='/logo.png')
   nav
     ul
       li
