Created gallery and wiki pages

--- a/templates/layouts/homepage.pug
+++ b/templates/layouts/homepage.pug
@@ -7,13 +7,13 @@
     .call_to_action
       ul.row
         li
-          a(href='#') Play
+          a(href='/games.html') Play
         li
-          a(href='#') Concept Art
+          a(href='/gallery/concept-art.html') Concept Art
         li
-          a(href='#') Storyline
+          a(href='/wiki/storylines.html') Storylines
         li
-          a(href='#') Github
+          a(href='http://github.com/paulbrzeski/Langenium') Github
   .row
     .news
       h2 News
