Fixed games link

--- a/templates/layouts/homepage.pug
+++ b/templates/layouts/homepage.pug
@@ -7,7 +7,7 @@
     .call_to_action
       ul.row
         li
-          a(href='/games.html') Play
+          a(href='/games') Play
         li
           a(href='/gallery/concept-art.html') Concept Art
         li
